--- a/WpfApp1/View/MainWindow.xaml
+++ b/WpfApp1/View/MainWindow.xaml
@@ -3,7 +3,6 @@
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-		xmlns:local="clr-namespace:WpfApp1"
 		xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
 
 		mc:Ignorable="d"
@@ -23,10 +22,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0" Background="Transparent" >
-            <materialDesign:ColorZone Mode="PrimaryMid"
-                materialDesign:ShadowAssist.ShadowDepth="Depth2"
-                materialDesign:ShadowAssist.ShadowEdges="Bottom">
+        <Grid Grid.Row="0" Background="{DynamicResource PrimaryHueMidBrush}" >
 
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" >
 
@@ -49,7 +45,6 @@
                     </ListBox>
                     
                 </StackPanel>
-            </materialDesign:ColorZone>
         </Grid>
         <Frame Grid.Row="1" Content="{Binding CurrentPage}" NavigationUIVisibility="Hidden" /> 
     </Grid>
