--- a/Hospital.UI/Controls/RegDoctorTable.xaml
+++ b/Hospital.UI/Controls/RegDoctorTable.xaml
@@ -4,9 +4,25 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Hospital.UI.Controls"
+             xmlns:data="clr-namespace:Hospital.UI.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <!--<UserControl.DataContext>
+        <data:RegistratorViewModel/>
+    </UserControl.DataContext>-->
+
     <Grid>
-        <TextBlock Text="RegistratorTableTest"/>
+        
+        <DataGrid ItemsSource="{Binding Doctors}" AutoGenerateColumns="False">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Binding="{Binding FirstName}" Header="ИМЯ"/>
+                    <DataGridTextColumn Binding="{Binding MidName}" Header="ФАМИЛИЯ"/>
+                    <DataGridTextColumn Binding="{Binding LastName}" Header="ОТЧЕСТВО"/>
+                    <DataGridTextColumn Binding="{Binding Qualification}" Header="СПЕЦИАЛЬНОСТЬ"/>
+                    <DataGridTextColumn Binding="{Binding Department.Title.Title}" Header="ОТЕДЕЛЕНИЕ" />
+                    <DataGridTextColumn Binding="{Binding Adress.City}" Header="АДРЕС"/>
+                    </DataGrid.Columns>
+        </DataGrid>
+        
     </Grid>
 </UserControl>
