--- a/Hospital.UI/Views/Registrator.xaml
+++ b/Hospital.UI/Views/Registrator.xaml
@@ -22,7 +22,7 @@
         
         <Grid Grid.Column="0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
+                <RowDefinition Height="35" />
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             
