--- a/Hospital.UI/Controls/RegEditPanel.xaml
+++ b/Hospital.UI/Controls/RegEditPanel.xaml
@@ -5,8 +5,27 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Hospital.UI.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="720" d:DesignWidth="350">
     <Grid>
-        <TextBlock Text="RegEditPanel"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="35"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="70"/>
+        </Grid.RowDefinitions>
+
+        <TextBlock Text="НАПРАВЛЕНИЕ" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Border Background="{DynamicResource MahApps.Brushes.Accent}" Grid.Row="0"/>
+
+        <TextBlock Text="RegEditPanel" Grid.Row="1"/>
+
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Button Content="Отмена" Grid.Row="2" Grid.Column="0" Margin="20,20,10,20"/>
+            <Button Content="СОХРАНИТЬ" Grid.Row="2" Grid.Column="1" Margin="10,20,20,20"/>
+
+        </Grid>
     </Grid>
 </UserControl>
