--- a/Hospital.UI/Controls/RegEntryPanel.xaml
+++ b/Hospital.UI/Controls/RegEntryPanel.xaml
@@ -4,9 +4,46 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Hospital.UI.Controls"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             xmlns:vm="clr-namespace:Hospital.UI.ViewModels"
+             mc:Ignorable="d"
+             d:DesignHeight="720" d:DesignWidth="350">
+    <!--<UserControl.DataContext>
+        <vm:RegistratorViewModel/>
+    </UserControl.DataContext>-->
+
     <Grid>
-        <TextBlock Text="RegEntryPanel"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="35"/>
+            <RowDefinition Height="25"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="25"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="70"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <TextBlock Text="НАПРАВЛЕНИЕ" Grid.ColumnSpan="2" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+
+        <TextBlock Grid.ColumnSpan="2" Grid.Row="1" Text="Врач" Background="DarkGray" TextAlignment="Right" Padding="10,3"/>
+
+        <StackPanel Grid.Row="2" Orientation="Vertical">
+            <TextBlock Text="{Binding SelectedStaff.FirstName}"/>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="{Binding SelectedStaff.MidName}"/>
+                <TextBlock Text="{Binding SelectedStaff.LastName}"/>
+            </StackPanel>
+        </StackPanel>
+        <TextBlock Text="Клиент" Grid.ColumnSpan="2" Grid.Row="3" Background="DarkGray" TextAlignment="Right" Padding="10,3"/>
+        <StackPanel Grid.Row="4" Orientation="Vertical">
+            <TextBlock Text="{Binding SelectedPatient.FirstName}"/>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="{Binding SelectedPatient.MidName}"/>
+                <TextBlock Text="{Binding SelectedPatient.LastName}"/>
+            </StackPanel>
+        </StackPanel>
+        <Button Content="Редактировать" Grid.Row="5" Grid.Column="0" Margin="20,20,10,20"/>
+        <Button Content="ЗАПИСЬ" Grid.Row="5" Grid.Column="1" Margin="10,20,20,20" />
     </Grid>
 </UserControl>
