--- a/Hospital.UI/Controls/RegEditPanel.xaml
+++ b/Hospital.UI/Controls/RegEditPanel.xaml
@@ -4,28 +4,96 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Hospital.UI.Controls"
+             xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+             xmlns:vm="clr-namespace:Hospital.UI.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="720" d:DesignWidth="350">
+    <!--<UserControl.DataContext>
+        <vm:RegistratorViewModel/>
+    </UserControl.DataContext>-->
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="35"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="70"/>
+            <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="НАПРАВЛЕНИЕ" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <TextBlock Text="РЕДАКТИРОВАТЬ" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Border Background="{DynamicResource MahApps.Brushes.Accent}" Grid.Row="0"/>
 
-        <TextBlock Text="RegEditPanel" Grid.Row="1"/>
-
+        <StackPanel Orientation="Vertical" Grid.Row="1" Margin="20,10">
+            <TextBlock Text="Фамилия"/>
+            <TextBox Text="{Binding EditingPatient.FirstName}"/>
+            <TextBlock Text="Имя"/>
+            <TextBox Text="{Binding EditingPatient.MidName}"/>
+            <TextBlock Text="Отчество"/>
+            <TextBox Text="{Binding EditingPatient.LastName}"/>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <TextBlock Text="Дата" Grid.Row="0" Grid.Column="0"/>
+                <TextBlock Text="Пол" Grid.Row="0" Grid.Column="1"/>
+                <DatePicker Grid.Row="1" Grid.Column="0" SelectedDate="{Binding EditingPatient.BirthDay}"/>
+                <ComboBox SelectedItem="{Binding EditingPatient.Gender}" 
+                          ItemsSource="{Binding Gender}"
+                          Grid.Row="1" Grid.Column="1"/>
+                <TextBlock Text="ОМС" Grid.Row="2" Grid.ColumnSpan="2"/>
+                <ComboBox Grid.Row="3" Grid.Column="0"
+                          ItemsSource="{Binding Belays, IsAsync=True, UpdateSourceTrigger=PropertyChanged}"
+                          SelectedValue="{Binding EditingPatient.Belay.Title}"
+                          DisplayMemberPath="Title"
+                          SelectedValuePath="Title"
+                          SelectedItem="{Binding EditingPatient.Belay}"/>
+                <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding  EditingPatient.BelayCode}"/>
+            </Grid>
+            <TextBlock Text="Номер телефона 1"/>
+            <TextBox Text="{Binding EditingPatient.PhoneNumber}"/>
+            <TextBlock Text="Номер телефона 2"/>
+            <TextBox/>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Row="0" Grid.ColumnSpan="2" Text="Адрес прописки"/>
+                <TextBox Grid.Row="1" Grid.Column="0"/>
+                <TextBox Grid.Row="1" Grid.Column="1"/>
+                <TextBox Grid.Row="2" Grid.Column="0"/>
+                <TextBox Grid.Row="2" Grid.Column="1"/>
+                <TextBlock Grid.Row="3" Grid.Column="0"  Text="Место жительства"/>
+                <CheckBox Grid.Row="3" Grid.Column="1" Content="Прописка"/>
+                <TextBox Grid.Row="4" Grid.Column="0"/>
+                <TextBox Grid.Row="4" Grid.Column="1"/>
+                <TextBox Grid.Row="5" Grid.Column="0"/>
+                <TextBox Grid.Row="5" Grid.Column="1"/>
+            </Grid>
+            
+        </StackPanel>
+        
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Button Content="Отмена" Grid.Row="2" Grid.Column="0" Margin="20,20,10,20"/>
-            <Button Content="СОХРАНИТЬ" Grid.Row="2" Grid.Column="1" Margin="10,20,20,20"/>
-
+            <Button Content="Отмена" Grid.Row="2" Grid.Column="0" Margin="20,15,10,15" Command="{Binding EditCancel}"/>
+            <Button Content="СОХРАНИТЬ" Grid.Row="2" Grid.Column="1" Margin="10,15,20,15" Command="{Binding SavePatient}"/>
         </Grid>
     </Grid>
 </UserControl>
