--- a/Hospital.UI/Controls/RegEntryPanel.xaml
+++ b/Hospital.UI/Controls/RegEntryPanel.xaml
@@ -18,15 +18,15 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="25"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="70"/>
+            <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <TextBlock Text="НАПРАВЛЕНИЕ" Grid.ColumnSpan="2" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-
-        <TextBlock Grid.ColumnSpan="2" Grid.Row="1" Text="Врач" Background="DarkGray" TextAlignment="Right" Padding="10,3"/>
+        <Border Background="{DynamicResource MahApps.Brushes.Window.Background}" Grid.ColumnSpan="2" Grid.Row="0"/>
+        <TextBlock Text="НАПРАВЛЕНИЕ" Grid.ColumnSpan="2" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Black"/>
+        <TextBlock Grid.ColumnSpan="2" Grid.Row="1" Text="Врач" Style="{StaticResource tb_PanelCaptionSeparator}"/>
 
         <StackPanel Grid.Row="2" Orientation="Vertical">
             <TextBlock Text="{Binding SelectedStaff.FirstName}"/>
@@ -35,7 +35,7 @@
                 <TextBlock Text="{Binding SelectedStaff.LastName}"/>
             </StackPanel>
         </StackPanel>
-        <TextBlock Text="Клиент" Grid.ColumnSpan="2" Grid.Row="3" Background="DarkGray" TextAlignment="Right" Padding="10,3"/>
+        <TextBlock Text="Клиент" Grid.ColumnSpan="2" Grid.Row="3" Style="{StaticResource tb_PanelCaptionSeparator}"/>
         <StackPanel Grid.Row="4" Orientation="Vertical">
             <TextBlock Text="{Binding SelectedPatient.FirstName}"/>
             <StackPanel Orientation="Horizontal">
@@ -43,7 +43,7 @@
                 <TextBlock Text="{Binding SelectedPatient.LastName}"/>
             </StackPanel>
         </StackPanel>
-        <Button Content="Редактировать" Grid.Row="5" Grid.Column="0" Margin="20,20,10,20"/>
-        <Button Content="ЗАПИСЬ" Grid.Row="5" Grid.Column="1" Margin="10,20,20,20" />
+        <Button Content="Редактировать" Grid.Row="5" Grid.Column="0" Margin="20,15,10,15" Command="{Binding EditUser}"/>
+        <Button Content="ЗАПИСЬ" Grid.Row="5" Grid.Column="1" Margin="10,15,20,15" />
     </Grid>
 </UserControl>
