--- a/Hospital.UI/Resources/Dictionary.xaml
+++ b/Hospital.UI/Resources/Dictionary.xaml
@@ -62,4 +62,12 @@
         </Setter>
     </Style>
 
+    <Style TargetType="TextBlock" x:Key="tb_PanelCaptionSeparator">
+        <Setter Property="FontSize" Value="13"/>
+        <Setter Property="FontWeight" Value="DemiBold"/>
+        <Setter Property="Background" Value="{DynamicResource MahApps.Brushes.Gray3}"/>
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="TextAlignment" Value="Right"/>
+        <Setter Property="Padding" Value="10,3"/>
+    </Style>
 </ResourceDictionary>
