--- a/Hospital.UI/Controls/RegDoctorTable.xaml
+++ b/Hospital.UI/Controls/RegDoctorTable.xaml
@@ -12,11 +12,16 @@
 	</UserControl.DataContext>-->
 
 	<Grid>
-		
-		<DataGrid ItemsSource="{Binding Doctors}" AutoGenerateColumns="False"
-				  SelectionMode="Single"
-				  SelectedItem="{Binding SelectedStaff}">
-				<DataGrid.Columns>
+        <DataGrid  ItemsSource="{Binding Doctors}" AutoGenerateColumns="False" SelectionMode="Single" IsReadOnly="True">
+
+            <DataGrid.InputBindings>
+                <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding SelectRow}" 
+                              CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}, Path=SelectedItem}" />
+                <KeyBinding Key="Enter" Command="{Binding SelectRow}" 
+                            CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}, Path=SelectedItem}"/>
+            </DataGrid.InputBindings>
+            
+            <DataGrid.Columns>
 					<DataGridTextColumn Binding="{Binding FirstName}" Header="ФАМИЛИЯ"/>
 					<DataGridTextColumn Binding="{Binding MidName}" Header="ИМЯ"/>
 					<DataGridTextColumn Binding="{Binding LastName}" Header="ОТЧЕСТВО"/>
@@ -33,7 +38,8 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
+            
 		</DataGrid>
-		
-	</Grid>
+    </Grid>
+    
 </UserControl>
