--- a/Hospital.UI/Controls/RegPatientTable.xaml
+++ b/Hospital.UI/Controls/RegPatientTable.xaml
@@ -12,20 +12,23 @@
     </UserControl.DataContext>-->
     
     <Grid>
-        <DataGrid ItemsSource="{Binding Patients}"
-                  SelectionMode="Single"
-                  SelectedItem="{Binding SelectedPatient}"
-                  AutoGenerateColumns="False">
+        <DataGrid ItemsSource="{Binding Patients}" SelectionMode="Single" IsReadOnly="True" AutoGenerateColumns="False">
+            
+            <DataGrid.InputBindings>
+                <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding SelectRow}"
+                              CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}, Path=SelectedItem}" />
+                <KeyBinding Key="Enter" Command="{Binding SelectRow}" 
+                            CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}, Path=SelectedItem}"/>
+            </DataGrid.InputBindings>
+
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ФАМИЛИЯ" Binding="{Binding FirstName}"/>
                 <DataGridTextColumn Header="ИМЯ" Binding="{Binding MidName}"/>
                 <DataGridTextColumn Header="ОТЧЕСТВО" Binding="{Binding LastName}"/>
                 <DataGridTextColumn Header="ДАТА РОЖДЕНИЯ" Binding="{Binding BirthDay.Date}"/>
-                <DataGridTextColumn Header="ОМС" Binding="{Binding Belay.Title}"/>
-                <DataGridTextColumn Header="НОМЕР" Binding="{Binding BelayCode}"/>
+                <DataGridTextColumn Header="НОМЕР ТЕЛЕФОНА" Binding="{Binding PhoneNumber}"/>
             </DataGrid.Columns>
                 
         </DataGrid>
-
     </Grid>
 </UserControl>
