--- a/Hospital.UI/Views/Registrator.xaml
+++ b/Hospital.UI/Views/Registrator.xaml
@@ -7,6 +7,7 @@
       xmlns:local="clr-namespace:Hospital.UI.Views"
       xmlns:data="clr-namespace:Hospital.UI.ViewModels"
       xmlns:controls="clr-namespace:Hospital.UI.Controls"
+      xmlns:command="clr-namespace:Hospital.UI.Services"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800" >
 
@@ -19,13 +20,13 @@
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="Auto" MinWidth="200" MaxWidth="400"/>
         </Grid.ColumnDefinitions>
-        
+
         <Grid Grid.Column="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="35" />
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            
+
             <Border Grid.Row="0" Background="Gray"/>
             <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left">
                 <ListBox  ItemsSource="{Binding RegTables}" SelectedItem="{Binding CurrentRegTable}">
@@ -44,12 +45,15 @@
                 <TextBox Text="Поиск"/>
             </StackPanel>
             <Button Content="РЕГИСТРАЦИЯ" Grid.Row="0" HorizontalAlignment="Right" Command="{Binding CreatePatient}"/>
-            
+
             <ContentControl Content="{Binding CurrentRegTable}" Grid.Row="1"/>
+            
         </Grid>
+        
         <Grid Grid.Column="1" Background="LightBlue">
             <mah:TransitioningContentControl Content="{Binding CurrentRegPanel}" Transition="LeftReplace"/>
         </Grid>
+        
         <GridSplitter Grid.Column="1" ResizeDirection="Columns" HorizontalAlignment="Left" BorderThickness="2" BorderBrush="Red"/>
     </Grid>
 </UserControl>
