--- a/Hospital.UI/Controls/Registrator/RegDoctorTable.xaml
+++ b/Hospital.UI/Controls/Registrator/RegDoctorTable.xaml
@@ -1,17 +1,24 @@
-﻿<UserControl x:Class="Hospital.UI.Controls.RegDoctorTable"
+﻿<UserControl x:Class="Hospital.UI.Controls.Registrator.RegDoctorTable"
 			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-			 xmlns:local="clr-namespace:Hospital.UI.Controls"
-			 xmlns:vm="clr-namespace:Hospital.UI.ViewModels"
+			 xmlns:local="clr-namespace:Hospital.UI.Controls.Registrator"
+             xmlns:services="clr-namespace:Hospital.UI.Services"
+             xmlns:vm="clr-namespace:Hospital.UI.ViewModels.RegistratorViewModel"
 			 mc:Ignorable="d" 
 			 d:DesignHeight="450" d:DesignWidth="800">
-	<!--<UserControl.DataContext>
-		<vm:RegistratorViewModel/>
-	</UserControl.DataContext>-->
+    
+    <!--<UserControl.DataContext>
+        <vm:RegistratorViewModel/>
+    </UserControl.DataContext>-->
+    
+    <UserControl.Resources>
+        <services:RowDisablingConverter x:Key="MyRowConverter"/>
+    </UserControl.Resources>
 
-	<Grid>
+
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
@@ -54,12 +61,32 @@
             </Grid.RowDefinitions>
             <Border Grid.Row="0" Background="Gray"/>
             <StackPanel Grid.Row="0" Orientation="Horizontal">
-                <TextBlock Text="{Binding SelectedStaff.FirstName}"/>
-                <TextBlock Text="{Binding SelectedStaff.MidName}"/>
-                <TextBlock Text="{Binding SelectedStaff.LastName}"/>
+                <TextBlock Text="{Binding SelectedEntry.DoctorDestination.FirstName}"/>
+                <TextBlock Text="{Binding SelectedEntry.DoctorDestination.MidName}"/>
+                <TextBlock Text="{Binding SelectedEntry.DoctorDestination.LastName}"/>
             </StackPanel>
-            <DataGrid Grid.Row="1" ItemsSource="{Binding Entries}" AutoGenerateColumns="False" IsReadOnly="True">
+            <DataGrid Grid.Row="1" ItemsSource="{Binding Entries}"
+                      SelectionMode="Single"
+                      AutoGenerateColumns="False" IsReadOnly="True">
+                <DataGrid.RowStyle>
+                        <Style TargetType="{x:Type DataGridRow}" BasedOn="{StaticResource MahApps.Styles.DataGridRow.Azure}">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding Path=EntryStatus, Converter={StaticResource MyRowConverter}}" Value="True">
+                                <Setter Property="Foreground" Value="Gray"/>
+                                <!--<Setter Property="IsHitTestVisible" Value="False"/>-->
+                                <Setter Property="IsEnabled" Value="False"/>
+                            </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                </DataGrid.RowStyle>
+                <DataGrid.InputBindings>
+                    <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding SelectEntry}"
+                              CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}, Path=SelectedItem}" />
+                    <KeyBinding Key="Enter" Command="{Binding SelectEntry}" 
+                            CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}, Path=SelectedItem}"/>
+                </DataGrid.InputBindings>
                 <DataGrid.Columns>
+                    <DataGridTextColumn Header="test_name" Binding="{Binding DoctorDestination.FirstName}"/>
                     <DataGridTextColumn Header="ДАТА" Binding="{Binding TargetDateTime}"/>
                     <DataGridTextColumn Header="ВРЕМЯ" Binding="{Binding TargetDateTime}"/>
                     <DataGridTextColumn Header="ФАМИЛИЯ" Binding="{Binding Patient.FirstName}"/>
