--- a/Hospital.UI/Controls/Registrator/RegEditPanel.xaml
+++ b/Hospital.UI/Controls/Registrator/RegEditPanel.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="Hospital.UI.Controls.RegEditPanel"
+﻿<UserControl x:Class="Hospital.UI.Controls.Registrator.RegEditPanel"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Hospital.UI.Controls"
+             xmlns:local="clr-namespace:Hospital.UI.Controls.Registrator"
              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:vm="clr-namespace:Hospital.UI.ViewModels"
              xmlns:domain="clr-namespace:Hospital.Domain.Model;assembly=Hospital.Domain"
@@ -14,7 +14,6 @@
         <vm:RegistratorViewModel/>
     </UserControl.DataContext>-->
     
-    
     <UserControl.Resources>
         <ObjectDataProvider x:Key="genderEnum" MethodName="GetValues"
                         ObjectType="{x:Type sys:Enum}">
@@ -23,7 +22,6 @@
             </ObjectDataProvider.MethodParameters>
         </ObjectDataProvider>
     </UserControl.Resources>
-
 
     <Grid>
         <Grid.RowDefinitions>
