--- a/Hospital.UI/Controls/Registrator/RegPatientTable.xaml
+++ b/Hospital.UI/Controls/Registrator/RegPatientTable.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="Hospital.UI.Controls.RegPatientTable"
+﻿<UserControl x:Class="Hospital.UI.Controls.Registrator.RegPatientTable"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Hospital.UI.Controls"
-             xmlns:vm="clr-namespace:Hospital.UI.ViewModels"
+             xmlns:local="clr-namespace:Hospital.UI.Controls.Registrator"
+             xmlns:vm="clr-namespace:Hospital.UI.ViewModels.RegistratorViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <!--<UserControl.DataContext>
@@ -15,7 +15,7 @@
         <DataGrid ItemsSource="{Binding Patients}" SelectionMode="Single" IsReadOnly="True" AutoGenerateColumns="False">
             
             <DataGrid.InputBindings>
-                <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding SelectRow}"
+                <MouseBinding MouseAction="LeftDoubleClick"  Command="{Binding SelectRow}"
                               CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}, Path=SelectedItem}" />
                 <KeyBinding Key="Enter" Command="{Binding SelectRow}" 
                             CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}, Path=SelectedItem}"/>
