--- a/Hospital.UI/Controls/Registrator/RegDoctorTable.xaml
+++ b/Hospital.UI/Controls/Registrator/RegDoctorTable.xaml
@@ -8,11 +8,11 @@
              xmlns:vm="clr-namespace:Hospital.UI.ViewModels.RegistratorViewModel"
 			 mc:Ignorable="d" 
 			 d:DesignHeight="450" d:DesignWidth="800">
-    
+
     <!--<UserControl.DataContext>
         <vm:RegistratorViewModel/>
     </UserControl.DataContext>-->
-    
+
     <UserControl.Resources>
         <services:RowDisablingConverter x:Key="MyRowConverter"/>
     </UserControl.Resources>
@@ -23,17 +23,15 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <DataGrid  ItemsSource="{Binding Doctors}" AutoGenerateColumns="False" SelectionMode="Single" IsReadOnly="True">
-
+        <DataGrid  ItemsSource="{Binding Doctors}" Style="{StaticResource TableCommon}">
             <DataGrid.InputBindings>
                 <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding SelectRow}" 
                               CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}, Path=SelectedItem}" />
                 <KeyBinding Key="Enter" Command="{Binding SelectRow}" 
                             CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}, Path=SelectedItem}"/>
             </DataGrid.InputBindings>
-            
             <DataGrid.Columns>
-					<DataGridTextColumn Binding="{Binding DoctorDestination.FirstName}" Header="ФАМИЛИЯ"/>
+                <DataGridTextColumn Binding="{Binding DoctorDestination.FirstName}" Header="ФАМИЛИЯ"/>
                 <DataGridTextColumn Binding="{Binding DoctorDestination.MidName}" Header="ИМЯ"/>
                 <DataGridTextColumn Binding="{Binding DoctorDestination.LastName}" Header="ОТЧЕСТВО"/>
                 <DataGridTextColumn Binding="{Binding DoctorDestination.Qualification}" Header="СПЕЦИАЛЬНОСТЬ"/>
@@ -52,8 +50,8 @@
                 <DataGridTextColumn Binding="{Binding TargetDateTime.TimeOfDay}" Header="ВРЕМЯ"/>
                 <DataGridTextColumn Binding="{Binding EntryStatus}" Header="СТАТУС"/>
             </DataGrid.Columns>
-		</DataGrid>
-            
+        </DataGrid>
+
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="40"/>
@@ -65,19 +63,20 @@
                 <TextBlock Text="{Binding SelectedEntry.DoctorDestination.MidName}"/>
                 <TextBlock Text="{Binding SelectedEntry.DoctorDestination.LastName}"/>
             </StackPanel>
-            <DataGrid Grid.Row="1" ItemsSource="{Binding Entries}"
-                      SelectionMode="Single"
-                      AutoGenerateColumns="False" IsReadOnly="True">
+            <DataGrid Grid.Row="1" ItemsSource="{Binding Entries}" Style="{StaticResource TableCommon}">
                 <DataGrid.RowStyle>
-                        <Style TargetType="{x:Type DataGridRow}" BasedOn="{StaticResource MahApps.Styles.DataGridRow.Azure}">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding Path=EntryStatus, Converter={StaticResource MyRowConverter}}" Value="True">
+                    <Style TargetType="{x:Type DataGridRow}" BasedOn="{StaticResource MahApps.Styles.DataGridRow}">
+                        <Setter Property="FontSize" Value="15"/>
+                        <Setter Property="Height" Value="35"/>
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding Path=EntryStatus, Converter={StaticResource MyRowConverter}}" Value="True">
                                 <Setter Property="Foreground" Value="Gray"/>
+                                <Setter Property="Background" Value="{DynamicResource BrushPrimaryBorderLight}"/>
                                 <!--<Setter Property="IsHitTestVisible" Value="False"/>-->
                                 <Setter Property="IsEnabled" Value="False"/>
                             </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
+                        </Style.Triggers>
+                    </Style>
                 </DataGrid.RowStyle>
                 <DataGrid.InputBindings>
                     <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding SelectEntry}"
@@ -97,8 +96,8 @@
                 </DataGrid.Columns>
             </DataGrid>
         </Grid>
-        
+
         <GridSplitter Grid.Row="1" ResizeDirection="Rows" VerticalAlignment="Top" BorderBrush="Red" BorderThickness="2"/>
     </Grid>
-    
+
 </UserControl>
