--- a/Hospital.UI/Controls/Registrator/RegEntryPanel.xaml
+++ b/Hospital.UI/Controls/Registrator/RegEntryPanel.xaml
@@ -20,7 +20,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
-        <Border Background="{DynamicResource MahApps.Brushes.Window.Background}" Grid.ColumnSpan="2" Grid.Row="0"/>
+        <Border Background="{StaticResource BrushBackgroundPaper}" Grid.ColumnSpan="2" Grid.Row="0"/>
         <TextBlock Text="НАПРАВЛЕНИЕ" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Black"/>
         <TextBlock Grid.ColumnSpan="2" Grid.Row="1" Text="Врач" Style="{StaticResource tb_PanelCaptionSeparator}"/>
 
@@ -30,7 +30,7 @@
                 <TextBlock Text="{Binding SelectedEntry.DoctorDestination.MidName}" FontSize="22" Padding="10,0,10,5" />
                 <TextBlock Text="{Binding SelectedEntry.DoctorDestination.LastName}" FontSize="22" Padding="0,0,0,5"/>
             </StackPanel>
-            <Label Content="Врач-парадонтолог высшей категории" FontSize="14" Padding="10,5" BorderThickness="0,1,0,0" BorderBrush="LightGray"/>
+            <Label Content="Врач-парадонтолог высшей категории" FontSize="14" Padding="10,5" BorderThickness="0,1,0,0"  BorderBrush="{StaticResource BrushPrimaryBorderLight}"/>
             <Grid Margin="0,10">
                 <Grid.Resources>
                     <Style TargetType="{x:Type TextBlock}">
@@ -49,7 +49,7 @@
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <Border Grid.RowSpan="3" Grid.Column="0" BorderThickness="0,0,1,0" BorderBrush="LightGray"/>
+                <Border Grid.RowSpan="3" Grid.Column="0" BorderThickness="0,0,1,0"  BorderBrush="{StaticResource BrushPrimaryBorderLight}"/>
                 <TextBlock Text="Отделение" Grid.Row="0" Grid.Column="0"/>
                 <TextBlock Text="Адрес" Grid.Row="1" Grid.Column="0"/>
                 <TextBlock Text="Кабинет" Grid.Row="2" Grid.Column="0"/>
@@ -60,23 +60,66 @@
                 </StackPanel>
                 <TextBlock Text="{Binding SelectedEntry.DoctorDestination.Cabinet}" Grid.Row="2" Grid.Column="1"/>
                 <Label Content="Дата записи" Grid.Row="3" Grid.Column="0" HorizontalContentAlignment="Center"
-                       BorderThickness="0,0,0,1" BorderBrush="LightGray" FontSize="15"
+                       BorderThickness="0,0,0,1"  BorderBrush="{StaticResource BrushPrimaryBorderLight}" FontSize="15"
                        Padding="0,5" Margin="0,10,20,0"/>
                 <Label Content="Время записи" Grid.Row="3" Grid.Column="1" HorizontalContentAlignment="Center"
-                       BorderThickness="0,0,0,1" BorderBrush="LightGray" FontSize="15"
+                       BorderThickness="0,0,0,1"  BorderBrush="{StaticResource BrushPrimaryBorderLight}" FontSize="15"
                        Padding="0,5" Margin="20,10,0,0"/>
-                <TextBlock Text="{Binding SelectedEntry.TargetDateTime.Date}" MaxWidth="200" Grid.Row="4" Grid.Column="0" TextAlignment="Center" Margin="0,0,20,0" FontSize="24"/>
-                <TextBlock Text="{Binding SelectedEntry.TargetDateTime.TimeOfDay}" MaxWidth="200" Grid.Row="4" Grid.Column="1" TextAlignment="Center" Margin="20,0,0,0" FontSize="24"/>
+                <TextBlock Text="{Binding SelectedEntry.TargetDateTime, StringFormat='dd/MM'}" MaxWidth="200" Grid.Row="4" Grid.Column="0" TextAlignment="Center" Margin="0,0,20,0" FontSize="24"/>
+                <TextBlock Text="{Binding SelectedEntry.TargetDateTime, StringFormat='HH:mm'}" MaxWidth="200" Grid.Row="4" Grid.Column="1" TextAlignment="Center" Margin="20,0,0,0" FontSize="24"/>
             </Grid>
         </StackPanel>
         
         <TextBlock Text="Клиент" Grid.Row="3" Style="{StaticResource tb_PanelCaptionSeparator}"/>
         <StackPanel Grid.Row="4" Orientation="Vertical" Margin="20,0">
-            <TextBlock Text="{Binding SelectedPatient.FirstName, Converter={StaticResource ToUpperCaseConverter}}"/>
+            <TextBlock Text="{Binding SelectedPatient.FirstName, Converter={StaticResource ToUpperCaseConverter}}" FontSize="22" Padding="10,10,10,0"/>
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="{Binding SelectedPatient.MidName}"/>
-                <TextBlock Text="{Binding SelectedPatient.LastName}"/>
+                <TextBlock Text="{Binding SelectedPatient.MidName}" FontSize="22" Padding="10,0,10,5" />
+                <TextBlock Text="{Binding SelectedPatient.LastName}" FontSize="22" Padding="0,0,0,5"/>
             </StackPanel>
+            <Border Grid.Row="5" BorderThickness="0,1,0,0"  BorderBrush="{StaticResource BrushPrimaryBorderLight}"/>
+            <Grid Margin="0,10">
+                <Grid.Resources>
+                    <Style TargetType="{x:Type TextBlock}">
+                        <Setter Property="FontSize" Value="15"/>
+                        <Setter Property="Padding" Value="10,2"/>
+                    </Style>
+                </Grid.Resources>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Border Grid.RowSpan="2" Grid.Column="0" BorderThickness="0,0,1,0"  BorderBrush="{StaticResource BrushPrimaryBorderLight}"/>
+
+                <TextBlock Text="Дата рождения" Grid.Row="0" Grid.Column="0"/>
+                <TextBlock Text="ОМС" Grid.Row="1" Grid.Column="0"/>
+                <TextBlock Text="{Binding SelectedPatient.BirthDay, StringFormat='dd.MM.yyyy'}" Grid.Row="0" Grid.Column="1"/>
+                <StackPanel Orientation="Vertical" Grid.Row="1" Grid.Column="1">
+                    <TextBlock Text="{Binding SelectedPatient.Belay.Title}"/>
+                    <TextBlock Text="{Binding SelectedPatient.BelayCode}"/>
+                </StackPanel>
+                <Label Grid.Row="2" Grid.ColumnSpan="2" Content="Контактная информация" HorizontalContentAlignment="Center" FontWeight="Bold" Foreground="{DynamicResource MahApps.Brushes.Accent}"
+                       BorderBrush="{StaticResource BrushPrimaryBorderLight}" BorderThickness="0,0,0,1"/>
+                <TextBlock Text="Номер телефона" Grid.Row="3" Grid.Column="0" Margin="0,5,0,0" />
+                <Border Grid.Row="3" Grid.Column="0" Margin="0,10,0,0" BorderThickness="0,0,1,0"  BorderBrush="{StaticResource BrushPrimaryBorderLight}"/>
+                <StackPanel Orientation="Vertical" Grid.Row="3" Grid.Column="1" Margin="0,5,0,0" >
+                    <TextBlock Text="{Binding SelectedPatient.PhoneNumber}"/>
+                    <TextBlock Text="{Binding SelectedPatient.PhoneNumber}"/>
+                </StackPanel>
+                <StackPanel Grid.Row="4" Grid.ColumnSpan="2" Orientation="Horizontal" >
+                    <TextBlock Text="E-mail"/>
+                    <TextBlock Text="sgsdg@ehfgsjh.com"/>
+                </StackPanel>
+
+
+            </Grid>
         </StackPanel>
         <Grid Grid.Row="5">
             <Grid.ColumnDefinitions>
