--- a/Hospital.UI/Resources/Dictionary.xaml
+++ b/Hospital.UI/Resources/Dictionary.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:ser="clr-namespace:Hospital.UI.Services"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls">
 
     <ser:ToUpperCaseConverter x:Key="ToUpperCaseConverter"/>
 
@@ -56,11 +56,10 @@
                                         FontSize="{TemplateBinding FontSize}"
                                         Width="{TemplateBinding Width}" 
                                         Height="{TemplateBinding Height}"/>
-                            
+
                         </Grid>
                     </Border>
                 </ControlTemplate>
-
             </Setter.Value>
         </Setter>
     </Style>
@@ -68,9 +67,63 @@
     <Style TargetType="TextBlock" x:Key="tb_PanelCaptionSeparator">
         <Setter Property="FontSize" Value="13"/>
         <Setter Property="FontWeight" Value="DemiBold"/>
-        <Setter Property="Background" Value="{DynamicResource MahApps.Brushes.Gray3}"/>
+        <Setter Property="Background" Value="{DynamicResource BrushPrimaryPanelTitle}"/>
         <Setter Property="Foreground" Value="White"/>
         <Setter Property="TextAlignment" Value="Right"/>
         <Setter Property="Padding" Value="10,3"/>
     </Style>
+
+
+    <!--Data-Grid-->
+
+    
+    <Style TargetType="{x:Type DataGrid}" x:Key="TableCommon" BasedOn="{StaticResource MahApps.Styles.DataGrid}">
+        <Setter Property="AlternatingRowBackground" Value="{DynamicResource BrushTableRowAlternationBackgroud}"/>
+        <Setter Property="AutoGenerateColumns" Value="False"/>
+        <Setter Property="SelectionMode" Value="Single"/>
+        <Setter Property="IsReadOnly" Value="True"/>
+        <Setter Property="GridLinesVisibility" Value="Horizontal"/>
+        <Setter Property="HorizontalGridLinesBrush" Value="{DynamicResource BrushPrimaryBorderLight}"/>
+        <Setter Property="VerticalGridLinesBrush" Value="{DynamicResource BrushPrimaryBorderLight}"/>
+           
+        <Setter Property="RowStyle">
+            <Setter.Value>
+                <Style TargetType="{x:Type DataGridRow}" BasedOn="{StaticResource MahApps.Styles.DataGridRow}">
+                    <Setter Property="FontSize" Value="15"/>
+                    <Setter Property="Height" Value="35"/>
+                    <Setter Property="BorderBrush" Value="{DynamicResource BrushPrimaryBorderLight}"/>
+                </Style>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="CellStyle">
+            <Setter.Value>
+                <Style TargetType="{x:Type DataGridCell}" BasedOn="{StaticResource MahApps.Styles.DataGridCell}">
+                    <Setter Property="Padding" Value="5"/>
+                    <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                    <Setter Property="BorderBrush" Value="{DynamicResource BrushPrimaryBorderLight}"/>
+                    <Setter Property="BorderThickness" Value="0,0,1,0"/>
+                    <Style.Triggers>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter Property="BorderBrush" Value="Transparent"/>
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="ColumnHeaderStyle">
+            <Setter.Value>
+                <Style TargetType="{x:Type DataGridColumnHeader}">
+                    <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                    <Setter Property="Height" Value="35"/>
+                    <Setter Property="BorderThickness" Value="0"/>
+                    <Setter Property="Padding" Value="10,0"/>
+                    <Setter Property="FontSize" Value="12"/>
+                    <Setter Property="FontWeight" Value="Bold"/>
+                    <Setter Property="Foreground" Value="{DynamicResource  BorderForegroundMid}"/>
+                    <Setter Property="Background" Value="{DynamicResource BrushTableHeader}"/>
+                </Style>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
 </ResourceDictionary>
