--- a/Hospital.UI/Controls/Registrator/RegEntryPanel.xaml
+++ b/Hospital.UI/Controls/Registrator/RegEntryPanel.xaml
@@ -13,7 +13,7 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="35"/>
+            <RowDefinition Height="40"/>
             <RowDefinition Height="25"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="25"/>
@@ -25,7 +25,7 @@
         <TextBlock Grid.ColumnSpan="2" Grid.Row="1" Text="Врач" Style="{StaticResource tb_PanelCaptionSeparator}"/>
 
         <StackPanel Grid.Row="2" Orientation="Vertical" Margin="20,0">
-            <TextBlock Text="{Binding SelectedEntry.DoctorDestination.FirstName, Converter={StaticResource ToUpperCaseConverter}}" FontSize="22" Padding="10,10,10,0"/>
+            <TextBlock Text="{Binding SelectedEntry.DoctorDestination.FirstName, Converter={StaticResource ToUpperCaseConverter}}"  FontSize="22" Padding="10,10,10,0"/>
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="{Binding SelectedEntry.DoctorDestination.MidName}" FontSize="22" Padding="10,0,10,5" />
                 <TextBlock Text="{Binding SelectedEntry.DoctorDestination.LastName}" FontSize="22" Padding="0,0,0,5"/>
@@ -100,7 +100,7 @@
 
                 <TextBlock Text="Дата рождения" Grid.Row="0" Grid.Column="0"/>
                 <TextBlock Text="ОМС" Grid.Row="1" Grid.Column="0"/>
-                <TextBlock Text="{Binding SelectedPatient.BirthDay, StringFormat='dd.MM.yyyy'}" Grid.Row="0" Grid.Column="1"/>
+                <TextBlock Text="{Binding SelectedPatient.BirthDay, StringFormat='dd.MM.yyyy'}" FontWeight="Bold" Grid.Row="0" Grid.Column="1"/>
                 <StackPanel Orientation="Vertical" Grid.Row="1" Grid.Column="1">
                     <TextBlock Text="{Binding SelectedPatient.Belay.Title}"/>
                     <TextBlock Text="{Binding SelectedPatient.BelayCode}"/>
@@ -110,7 +110,7 @@
                 <TextBlock Text="Номер телефона" Grid.Row="3" Grid.Column="0" Margin="0,5,0,0" />
                 <Border Grid.Row="3" Grid.Column="0" Margin="0,10,0,0" BorderThickness="0,0,1,0"  BorderBrush="{StaticResource BrushPrimaryBorderLight}"/>
                 <StackPanel Orientation="Vertical" Grid.Row="3" Grid.Column="1" Margin="0,5,0,0" >
-                    <TextBlock Text="{Binding SelectedPatient.PhoneNumber}"/>
+                    <TextBlock Text="{Binding SelectedPatient.PhoneNumber}" FontWeight="Bold"/>
                     <TextBlock Text="{Binding SelectedPatient.PhoneNumber}"/>
                 </StackPanel>
                 <StackPanel Grid.Row="4" Grid.ColumnSpan="2" Orientation="Horizontal" >
