--- a/Hospital.UI/Controls/Registrator/RegDoctorTable.xaml
+++ b/Hospital.UI/Controls/Registrator/RegDoctorTable.xaml
@@ -18,22 +18,7 @@
             <RowDefinition Height="40"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Border Grid.Row="0" Background="{StaticResource BrushBackgroundPaper}" BorderBrush="{StaticResource BrushTableSelected}" BorderThickness="0,0,0,2"/>
-        <Border Grid.Row="0" BorderBrush="{StaticResource BrushPrimaryBorderLight}" BorderThickness="0,1,0,0"/>
-        <StackPanel Grid.Row="0" Orientation="Horizontal">
-            <StackPanel.Resources>
-                <Style TargetType="{x:Type TextBlock}">
-                    <Setter Property="FontSize" Value="18"/>
-                    <Setter Property="Padding" Value="3"/>
-                    <Setter Property="VerticalAlignment" Value="Center"/>
-                </Style>
-            </StackPanel.Resources>
-            <Button Content="Фильтр" Command="{Binding InsertData}"/>
-            <TextBox MinWidth="150" Height="30" Margin="15,0"  FontSize="14"
-                         mah:TextBoxHelper.Watermark="Поиск..."
-                         mah:TextBoxHelper.SelectAllOnFocus="True"
-                         mah:TextBoxHelper.ClearTextButton="True"/>
-        </StackPanel>
+        <Border Grid.Row="0" Background="{DynamicResource BrushPrimaryPanel}" BorderBrush="{StaticResource BrushTableSelected}" BorderThickness="0,2,0,0"/>
 
         <DataGrid Grid.Row="1" ItemsSource="{Binding Doctors}" Style="{StaticResource TableCommon}" ColumnWidth="*" >
             <DataGrid.InputBindings>
