--- a/Hospital.UI/Resources/Dictionary.xaml
+++ b/Hospital.UI/Resources/Dictionary.xaml
@@ -65,6 +65,47 @@
         </Setter>
     </Style>
 
+    <Style x:Key="RegistratorSearchTab" TargetType="{x:Type ListBoxItem}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter Property="Opacity" Value=".5" />
+                        </Trigger>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter Property="Foreground" Value="{DynamicResource BrushAccent1}"/>
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Foreground" Value="{DynamicResource BrushAccent1}"/>
+                            <Setter Property="Background" Value="{DynamicResource BrushPrimaryPanel}" />
+                            <Setter Property="Cursor" Value="Hand"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                    <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" ClipToBounds="{TemplateBinding ClipToBounds}">
+                        <Grid>
+                            <TextBlock Text="{TemplateBinding Content}"
+                                        HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                        VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                        Foreground="{TemplateBinding Foreground}"
+                                        Padding="{TemplateBinding Padding}"
+                                        FontSize="{TemplateBinding FontSize}"
+                                        FontWeight="{TemplateBinding FontWeight}"
+                                        Width="{TemplateBinding Width}" 
+                                        Height="{TemplateBinding Height}"/>
+                        </Grid>
+                 
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="Padding" Value="10,0"/>
+        <Setter Property="Margin" Value="0,5"/>
+        <Setter Property="BorderThickness" Value="0,0,0,0"/>
+        <Setter Property="Foreground" Value="{DynamicResource BrushPrimaryBorderDark}"/>
+    </Style>
+
     <Style TargetType="TextBlock" x:Key="tb_PanelCaptionSeparator">
         <Setter Property="FontSize" Value="13"/>
         <Setter Property="FontWeight" Value="DemiBold"/>
@@ -73,6 +114,47 @@
         <Setter Property="TextAlignment" Value="Right"/>
         <Setter Property="Padding" Value="10,3"/>
     </Style>
+
+    <Style TargetType="{x:Type Button}" x:Key="RegistratorSearchBarButton">
+        <Setter Property="FontSize" Value="15"/>
+        <Setter Property="BorderThickness" Value="0,2,2,2"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource BrushAccent1}"/>
+        <Setter Property="Background" Value="{DynamicResource BrushAccent1}"/>
+        <Setter Property="Foreground" Value="{DynamicResource BrushBackgroundPaper}"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="{DynamicResource BrushAccent2}"/>
+                            <Setter Property="Cursor" Value="Hand"/>
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter Property="BorderBrush" Value="{DynamicResource BrushAccent2}"/>
+                            <Setter Property="Background" Value="{DynamicResource BrushAccent2}"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                    <Border Background="{TemplateBinding Background}"
+                                        BorderBrush="{TemplateBinding BorderBrush}"
+                                        BorderThickness="{TemplateBinding BorderThickness}"
+                                        VerticalAlignment="{TemplateBinding VerticalAlignment}"
+                                        HorizontalAlignment="{TemplateBinding HorizontalAlignment}"
+                                        CornerRadius="0,2,2,0"
+                                        Margin="{TemplateBinding Margin}">
+                        <ContentControl Content="{TemplateBinding Content}"
+                                                    Foreground="{TemplateBinding Foreground}"
+                                                    Padding="{TemplateBinding Padding}"
+                                                    FontWeight="{TemplateBinding FontWeight}" FontSize="{TemplateBinding FontSize}"
+                                                    VerticalAlignment="{TemplateBinding VerticalContentAlignment}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"                                                    />
+                    </Border>
+                </ControlTemplate>
+
+            </Setter.Value>
+        </Setter>
+    </Style>
+
 
     <!--Data-Grid-->
 
