--- a/Hospital.UI/Views/Registrator.xaml
+++ b/Hospital.UI/Views/Registrator.xaml
@@ -6,6 +6,7 @@
       xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
       xmlns:local="clr-namespace:Hospital.UI.Views"
       xmlns:vm="clr-namespace:Hospital.UI.ViewModels.RegistratorViewModel"
+      xmlns:searchBar="clr-namespace:Hospital.UI.Controls.Registrator"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800" >
 
@@ -13,13 +14,15 @@
         <vm:RegistratorViewModel/>
     </UserControl.DataContext>
 
-    <Grid>
+    <Grid MinWidth="1080" MaxWidth="1400" HorizontalAlignment="Stretch" Margin="20,0">
         <Grid.RowDefinitions>
-            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="150"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <mah:TransitioningContentControl Grid.Row="0"  Content="{Binding CurrentRegTable}" Transition="LeftReplace"/>
-        <mah:TransitioningContentControl Grid.Row="1" Content="{Binding CurrentPatientState}" Transition="LeftReplace"/>
-        <GridSplitter Grid.Row="1" ResizeDirection="Rows" VerticalAlignment="Top" BorderBrush="Transparent" BorderThickness="1"/>
+        
+        <searchBar:RegSearchBar Grid.Row="0"/>
+        <mah:TransitioningContentControl Grid.Row="1"/>
+        <mah:TransitioningContentControl Content="{Binding CurrentRegTable}" Grid.Row="2"/>
     </Grid>
 </UserControl>
